# simpleth

./: .gitignore  .readthedocs.yaml  CHANGES.txt  LICENSE.txt  MANIFEST.in  README - Info on simpleth project tasks for Toodledo.txt  README.rst  README.txt  requirements.txt  setup.cfg  setup.py  simpleth-0.1.3-py3-none-any.whl
artifacts/: Club.abi  HelloWorld2.abi  HelloWorld3.abi  HelloWorld4.abi  Test.abi  TestNatspec.abi  TestNeverDeployed.abi
docs/source/: Club.rst  HelloWorld1.rst  HelloWorld2.rst  HelloWorld3.rst  HelloWorld4.rst  Test.rst  Test.sol  TestContract.rst  TestNatSpec.rst  TestNatspec.rst  TestNeverDeployed.rst  TestTrx.rst  backup2active.rst  checkall.rst  commands.rst  conf.py  contracts.rst  docmake.rst  docsetup.rst  examples.rst  goSIMP.rst  index.rst  installing.rst  intro.rst  modules.rst  simpleth.rst  starting.rst  style.rst  style_guide.rst  tools.rst  using.rst  utils.rst
examples/: hello_world1.py  hello_world2.py  hello_world3.py  hello_world4.py
simpleth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
solidity/: HelloWorld2.sol  HelloWorld3.sol  TestNatspec.sol  TestTrx.sol  club.sol
src/contracts/: HelloWorld1.sol  HelloWorld2.sol  (+5 more)
tests/: X01-ethconvert.py  X01-s_ether.py  X02-s_time.py  X04-contract-Atlas.py  X06-s_print.py  Xall.bat  conftest.py  test02-simptime.py  test03-blockchain-Atlas.py  test04-contract.py  test05-contract-with-delay-Atlas.py  test05-contract-with-delay.py  test06-pprint.py
tools/: build.bat  buildall.bat  checkall.bat  compile.py  compileall.bat  makedoc.bat  nat2rst.py  upload.bat
(+53 files in other folders)
