[metadata]
name = simpleth
version = 0.7
license = MIT
description = Simplified Ethereum for Python
long_description = file: README.rst, LICENSE.txt
author = Stephen Newell
author_email = snewell4@gmail.com
classifiers=
   Programming Language :: Python :: 3
   Programming Language :: Solidity
   Framework :: Ganache
   Framework :: Ethereum

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   web3.py

[options.packages.find]
where=src
